force-app/main/default/objects/SapVistexAgreementLine__c/SapVistexAgreementLine__c.object-meta.xml
<CustomObject>
    <label>SAP Vistex Agreement Line</label>
    <nameField>
        <label>SAP Vistex Agreement Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Vistex Agreement Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>