force-app/main/default/objects/SapVistexAgreementLine__c/fields/AuthorizeMultiplierDropShip__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeMultiplierDropShip__c</fullName>
    <label>Authorize Multiplier Drop Ship</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>