force-app/main/default/objects/SapVistexAgreementLine__c/fields/AuthorizeMultiplierRebate__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeMultiplierRebate__c</fullName>
    <label>Authorize Multiplier Rebate</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>