force-app/main/default/objects/SapVistexAgreementLine__c/fields/AuthorizeNetPriceDropShip__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeNetPriceDropShip__c</fullName>
    <label>Authorize Net Price Drop Ship</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>