force-app/main/default/objects/SapVistexAgreementLine__c/fields/AuthorizeNetPriceRebate__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeNetPriceRebate__c</fullName>
    <label>Authorize Net Price Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>