force-app/main/default/objects/SapVistexAgreementLine__c/fields/BenefitEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>BenefitEffectiveDate__c</fullName>
    <label>Benefit Effective Date</label>
    <type>Date</type>
</CustomField>