force-app/main/default/objects/SapVistexAgreementLine__c/fields/BenefitExpireDate__c.field-meta.xml
<CustomField>
    <fullName>BenefitExpireDate__c</fullName>
    <label>Benefit Expire Date</label>
    <type>Date</type>
</CustomField>