force-app/main/default/objects/SapVistexAgreementLine__c/fields/DiscountSchedule__c.field-meta.xml
<CustomField>
    <fullName>DiscountSchedule__c</fullName>
    <label>Discount Schedule</label>
    <length>5</length>
    <type>Text</type>
</CustomField>