force-app/main/default/objects/SapVistexAgreementLine__c/fields/FirmPriceIndicator__c.field-meta.xml
<CustomField>
    <fullName>FirmPriceIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firm Price Indicator</label>
    <type>Checkbox</type>
</CustomField>