force-app/main/default/objects/SapVistexAgreementLine__c/fields/GrossMargin__c.field-meta.xml
<CustomField>
    <fullName>GrossMargin__c</fullName>
    <label>Gross Margin</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>