force-app/main/default/objects/SapVistexAgreementLine__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>SapVistexAgreementLine Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>