force-app/main/default/objects/SapVistexAgreementLine__c/fields/PDCat__c.field-meta.xml
<CustomField>
    <fullName>PDCat__c</fullName>
    <label>PDCat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>