force-app/main/default/objects/SapVistexAgreementLine__c/fields/PdcatSubCategory__c.field-meta.xml
<CustomField>
    <fullName>PdcatSubCategory__c</fullName>
    <label>PDCat Sub Category</label>
    <length>2</length>
    <type>Text</type>
</CustomField>