force-app/main/default/objects/SapVistexAgreementLine__c/fields/PriceHierarchy1__c.field-meta.xml
<CustomField>
    <fullName>PriceHierarchy1__c</fullName>
    <label>Price Hierarchy 1</label>
    <length>3</length>
    <type>Text</type>
</CustomField>