force-app/main/default/objects/SapVistexAgreementLine__c/fields/PriceIndicatorLevel__c.field-meta.xml
<CustomField>
    <fullName>PriceIndicatorLevel__c</fullName>
    <label>Price Indicator Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>