force-app/main/default/objects/SapVistexAgreementLine__c/fields/SAP_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Agreement_Number__c</fullName>
    <externalId>true</externalId>
    <label>SAP Agreement Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>