force-app/main/default/objects/SapVistexAgreementLine__c/fields/SAPMaterialNumber__c.field-meta.xml
<CustomField>
    <fullName>SAPMaterialNumber__c</fullName>
    <label>SAP Material Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>