force-app/main/default/objects/SapVistexAgreementLine__c/fields/System_Modstamp__c.field-meta.xml
<CustomField>
    <fullName>System_Modstamp__c</fullName>
    <label>System Modstamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>