force-app/main/default/objects/SapVistexAgreementLine__c/fields/TotalCost__c.field-meta.xml
<CustomField>
    <fullName>TotalCost__c</fullName>
    <label>Total Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>