force-app/main/default/objects/SapVistexAgreementLine__c/fields/Unit_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_List_Price__c</fullName>
    <label>Unit List Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>